feat: ajout de la dépendance heroicons

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.5",
     "pinia": "^2.2.4",
     "vue": "^3.4.37"
   },
